--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1255,12 +1255,12 @@ $default-float: left;
 
 // Background color for the top bar
 
-   $topbar-bg-color: #b0b2b5;
+   $topbar-bg-color: #2d3033;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
 
-   $topbar-height: 75px;
+   $topbar-height: 70px;
 // $topbar-margin-bottom: 0;
 
 // Control Input height for top bar
