--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -35,7 +35,7 @@
 
       
 
-       <h4>Albany Dust Free Cleaning will give you a friendly and personable experience that you deserve.</h4>
+       <h4 class="subheader">Albany Dust Free Cleaning will give you a friendly and personable experience that you deserve.</h4>
 
     </div>
 
