--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
   	<!-- Set the viewport width to device width for mobile -->
+     <meta name="author" content="Christopher Crowd">
     <meta name="description" content="Albany Dust Free Cleaning Service">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -76,9 +77,10 @@
     
       <div class="row">
         <div class="large-6 columns">
-          <p class="content-footer">&copy; Copyright 2013 Albany Dust Free Cleaning</p>
+        
           <p class="content-footer">Phone: 518-944-4804</p>
           <p class="content-footer">Email: customerservice@albanydfcleaning.com</p>
+           <p class="content-footer banner">Albany Dust Free Cleaning &copy; Copyright 2013 </p>
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right low-nav">
@@ -94,6 +96,7 @@
           
           </ul>
         </div>
+
       </div>
     </div> 
   </footer>
