--- a/app/views/static_pages/rates.html.erb
+++ b/app/views/static_pages/rates.html.erb
@@ -34,6 +34,15 @@
 </div>
 
 
+<div class="row">
+    <div class="large-12 columns">
+       
+      <h4 class="promo">Like Our Service? Get 10% Percent Off Your Next Cleaning For Referring us! </h4>
+
+    </div>
+</div>
+
+
 
 
 <div class="row">
