--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 
        <ul class="title-area">
 
-           <li class="name"><h1 class="logo"><%=image_tag 'adfc_tag4.png'%>
+           <li class="name"><h1 class="logo"><%=image_tag 'albany_logo.png'%>
             
          </li>
          </ul>
