--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,13 +31,15 @@
 
        <ul class="title-area">
 
-           <li class="name"><h1 class="logo"><%=image_tag 'albany_logo.png'%>
+           <li class="name"><h1 class="logo"><%=image_tag 'albany_logo_s.png'%>
             
          </li>
          </ul>
        
+          
 
          <section class="top-bar-section">
+
           
            <ul class="left">
                 
@@ -52,8 +54,9 @@
            </ul>
 
            <div class="right white-headers">Phone:(518)944-4804</div>
-
+             
          </section>
+       
     </nav>
 
 
