--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,41 +26,37 @@
   <body class="<%=controller.controller_name%>">
     <div class="wrapper">
 
+  
 
-     <nav class="top-bar">
+  <header>
 
-       <ul class="title-area">
+          <div class="logos"><%=image_tag 'albany_logo_s.png'%>
+              </div>
+          <div class="header_container">
 
-           <li class="name"><h1 class="logo"><%=image_tag 'albany_logo_s.png'%>
-            
-         </li>
-         </ul>
-       
-          
-
-         <section class="top-bar-section">
-
-          
-           <ul class="left">
-                
-
-                 <li class="header-links"><%= link_to 'Home', static_pages_url%></li>
-                   <li class="header-links"><%= link_to 'Rates', static_pages_rates_path%></li>
-
-                 
-                      <li class="header-links"><%= link_to 'Services', static_pages_services_path%></li>
-                          <li class="header-links"><%= link_to 'Contact', contacts_new_path%></li>
-
-           </ul>
-
-           <div class="right white-headers">Phone:(518)944-4804</div>
              
-         </section>
-       
-    </nav>
+             <div class="navi"> 
+               <ul class="inline-list">
 
 
+              <li class="header-links"><%= link_to 'Home', static_pages_url%></li>
+            <li class="header-links"><%= link_to 'Rates', static_pages_rates_path%></li>
+            <li class="header-links"><%= link_to 'Services', static_pages_services_path%></a></li>
+          
+            <li class="header-links"><%= link_to 'About Us', static_pages_about_path%></li>
 
+              <li class="header-links"><%= link_to 'Contact', contacts_new_path%></li>
+          
+          </ul>
+          </div>
+
+
+            <div class="phone"><p>Phone:518-944-4804</p> 
+                                             </div>
+                                             <div class='phone_small'> <%=image_tag 'phone.png'%>    </div>
+            
+          </div>
+  </header>
 
    
 
@@ -89,13 +85,13 @@
           <ul class="inline-list right low-nav">
 
 
-              <li><%= link_to 'HOME', static_pages_url%></li>
-            <li><%= link_to 'RATES', static_pages_rates_path%></li>
-            <li><%= link_to 'SERVICES', static_pages_services_path%></a></li>
+              <li class="header-links"><%= link_to 'Home', static_pages_url%></li>
+            <li class="header-links"><%= link_to 'Rates', static_pages_rates_path%></li>
+            <li class="header-links"><%= link_to 'Services', static_pages_services_path%></a></li>
           
-            <li><%= link_to 'ABOUT US', static_pages_about_path%></li>
+            <li class="header-links"><%= link_to 'About Us', static_pages_about_path%></li>
 
-              <li><%= link_to 'CONTACT', contacts_new_path%></li>
+              <li class="header-links"><%= link_to 'Contact', contacts_new_path%></li>
           
           </ul>
         </div>
