--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
   	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
   	<!-- Set the viewport width to device width for mobile -->
-     <meta name="author" content="Christopher Crowd">
+     <meta name="author" content="Chris
+      Crowd">
     <meta name="description" content="Albany Dust Free Cleaning Service">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -30,13 +31,15 @@
 
   <header>
 
-          <div class="logos"><%=image_tag 'albany_logo_s.png'%>
-              </div>
+        
           <div class="header_container">
+
+              <div class="logos"><%=image_tag 'albany_logo_s.png'%>
+              </div>
 
              
              <div class="navi"> 
-               <ul class="inline-list">
+               <ul class="inline-list t-control">
 
 
               <li class="header-links"><%= link_to 'Home', static_pages_url%></li>
@@ -50,10 +53,10 @@
           </ul>
           </div>
 
-
-            <div class="phone"><p>Phone:518-944-4804</p> 
-                                             </div>
-                                             <div class='phone_small'> <%=image_tag 'phone.png'%>    </div>
+            <div class="menu"><%=link_to image_tag 'menu.png'%></div>
+            <div class="phone"><p>Phone:518-944-4804</p>  </div>
+                                            
+                                            
             
           </div>
   </header>
