--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -19,8 +19,9 @@ header{
 }
 
 .header_container{
-
-	width: 1000px;
+    
+	max-width: 1000px;
+	min-width: 320px;
 	height: 75px;
 
 	margin-left: auto;
@@ -29,7 +30,7 @@ header{
 
 .navi{
 	width: 425px;
-	margin-left: 20%;
+	margin-left: 2%;
     position: relative;
    padding-top: 30px;
    float: left;
@@ -38,18 +39,16 @@ header{
 
 
 .phone{
-	width: 266px;
-	margin-left: 1%;
-    position: relative;
-   padding-top: 30px;
-   float: right;
+	width: 17.5%;
+	 position: relative;
+	 float: left;
+	  padding-top: 3%;
+	  margin-left: 15%;
 
 }
 
 
-.phone_small{
-	display: none;
-}
+
 
 .phone p{
 	color: white;
@@ -114,9 +113,10 @@ header{
 
 
 .logos{
-	padding: 10px;
-	width: 250px;
-	position: absolute;
+	padding: 15px;
+	width: 200px;
+	position: relative;
+	float: left;
 
 }
 
@@ -215,6 +215,10 @@ color: #000;
 	font-weight: bold;
 }
 
+.header-links a{
+	color: white;
+}
+
 
 .link-left{
 
@@ -225,37 +229,80 @@ color: #000;
 	color: #FFEFD5;
 }
 
+.menu{
+	
+	display: none;
+
+}
+
 
 @media screen and (max-width : 1000px ){
 
-	.navi{
-		display: none;
-	}
 
+   .phone{
+   	display: none;
+   }
 	
 
-		.phone_small{
-	float: left;
-		margin-left: 1.5%;
-		
-			margin-left: 55%;
-}
-
+	
 }
 
 
-@media screen and (max-width : 757px ){
+@media screen and (max-width : 768px ){
 
 	.navi{
-		display: none;
+			margin-left: 2%;
 	}
 
 	.phone{
-		float: left;
-		margin-left: 1.5%;
+		float: right;
+		margin-left: 10%;
 		padding-top: 55px;
 
 	}
+
+
+
+
+
+
+}
+
+@media screen and (max-width : 660px ){
+
+
+	
+
+
+
+	
+
+	.navi{
+
+		display: none;
+  
+	}
+
+
+	.menu{
+	display: block;
+	width: 48px;
+	height: 48px;
+	float: right;
+	padding-top:10px; 
+	margin-right: 5%;
+
+}
+
+
+
+
+
+	
+
+
+    
+	
 
 
 
@@ -277,9 +324,9 @@ color: #000;
 	}
 
 
-	.phone{
-		display: none;
 
-	}
 
+
+
+	
 }
