working on rep nav

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,11 +1,22 @@
-
+/*resets*/
 html,body{
 	margin: 0;
 	padding: 0;
 	height: 100%;
 }
 
+.menu ul,
+.menu li,
+.menu a{
+	margin: 0;
+	padding: 0;
+	border: none;
+	outline: none;
+}
 
+
+
+/*header*/
 
 header{
 	width: 100%;
@@ -28,14 +39,51 @@ header{
 	margin-right: auto;
 }
 
-.navi{
+
+
+
+/*Menu*/
+
+
+.menu{
 	width: 425px;
+	height: 40px;
 	margin-left: 2%;
     position: relative;
-   padding-top: 30px;
-   float: left;
+    padding-top: 30px;
+    float: left;
 
 }
+
+.menu li{
+	display: block;
+	list-style: none;
+	float: left;
+	height: 40px;
+	position: relative;
+}
+
+.menu li a{
+	display: block;
+	text-decoration: none;
+	font-weight: bold;
+	color: #fff;
+	font-size:70%;
+	padding: 0 15px;
+	margin: 5px 0;
+	line-height: 30px; 
+	transition: color .3s ease;
+	-moz-transition: color .3s ease;
+	-webkit-transition: color .3s ease;
+	-ms-transition: color .3s ease;
+}
+
+	.menu li:hover > a{
+		color: #b94861;
+}
+
+
+
 
 
 .phone{
@@ -229,11 +277,7 @@ color: #000;
 	color: #FFEFD5;
 }
 
-.menu{
-	
-	display: none;
 
-}
 
 
 @media screen and (max-width : 1000px ){
@@ -271,7 +315,16 @@ color: #000;
 @media screen and (max-width : 660px ){
 
 
+	header{
 	
+	
+	
+	
+	
+	height: 200px;
+	
+	
+}
 
 
 
@@ -286,11 +339,29 @@ color: #000;
 
 	.menu{
 	display: block;
-	width: 48px;
-	height: 48px;
-	float: right;
+	width: 100px;
+	height: 40px;
+	float: left;
 	padding-top:10px; 
 	margin-right: 5%;
+	position: relative;
+}
+	
+
+	.menu li a{
+	display: block;
+	text-decoration: none;
+	font-weight: bold;
+	color: #fff;
+	font-size:80%;
+	padding: 0 15px;
+	margin: 5px 0;
+	line-height: 30px; 
+	transition: color .3s ease;
+	-moz-transition: color .3s ease;
+	-webkit-transition: color .3s ease;
+	-ms-transition: color .3s ease;
+}
 
 }
 
