--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,8 @@
               </div>
 
              
-             <div class="navi"> 
-               <ul class="inline-list t-control">
+             <div class="menu"> 
+               <ul>
 
 
               <li class="header-links"><%= link_to 'Home', static_pages_url%></li>
@@ -53,7 +53,7 @@
           </ul>
           </div>
 
-            <div class="menu"><%=link_to image_tag 'menu.png'%></div>
+          
             <div class="phone"><p>Phone:518-944-4804</p>  </div>
                                             
                                             
